# ad_task

./: .dockerignore  Dockerfile  README.md  alembic.ini  api.py  database.py  db_models.py  docker-compose.yml  gateways.py  main.py  models.py  pyproject.toml  repositories.py  requirements.txt  schemas.py  services.py  specifications.py
src/: models.py
src/adjust_task/: __main__.py  main.py
src/adjust_task/adapters/database/: dto.py  gateways.py
src/adjust_task/application/: models.py  services.py
src/adjust_task/domain/: dto.py  models.py  specifications.py
src/adjust_task/infrastructure/: database.py  db_models.py  framework.py  models.py
src/adjust_task/infrastructure/migrations/: env.py
src/adjust_task/infrastructure/migrations/versions/: 18e0feb0c568_populate_db.py
src/adjust_task/presentation/: api.py  schemas.py  utils.py
src/project/: __main__.py  main.py
src/project/adapters/database/: dto.py  gateways.py
src/project/application/: services.py
src/project/infrastructure/: database.py  framework.py  server.py
src/project/infrastructure/migrations/: env.py
src/project/infrastructure/migrations/versions/: 3bdd0aa05420_initial_migration.py
src/project/presentation/: api.py  schemas.py
tests/: conftest.py  locustfile.py  test_main.py  test_routes.py
